--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Amabilia</groupId>
-    <artifactId>Amabilia</artifactId>
+    <groupId>MySecondBot</groupId>
+    <artifactId>MySecondBot</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -25,8 +25,8 @@
                     <assembleDirectory>target</assembleDirectory>
                     <programs>
                         <program>
-                            <mainClass>AmabiliaPackage.Main</mainClass>
-                            <name>workerBot</name>
+                            <mainClass>SecondPackage.Main</mainClass>
+                            <name>secondBot</name>
                         </program>
                     </programs>
                 </configuration>
@@ -54,7 +54,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>AmabiliaPackage.Main</mainClass>
+                            <mainClass>SecondPackage.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
